--- a/HomeWork_TopDown/Assembly-CSharp.csproj
+++ b/HomeWork_TopDown/Assembly-CSharp.csproj
@@ -61,10 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\BeHaviors\TopDownAimRotation.cs" />
+    <Compile Include="Assets\Scripts\Text\TimeText.cs" />
     <Compile Include="Assets\Scripts\BeHaviors\TopDownMovement.cs" />
     <Compile Include="Assets\Scripts\Controllers\TopDownController.cs" />
     <Compile Include="Assets\Scripts\Controllers\CameraController.cs" />
-    <Compile Include="Assets\Scripts\IntroScripts\NameButton.cs" />
+    <Compile Include="Assets\Scripts\Button\SkinButton.cs" />
+    <Compile Include="Assets\Scripts\Button\NameButton.cs" />
     <Compile Include="Assets\Scripts\Controllers\PlayerInputController.cs" />
     <Compile Include="Assets\Scripts\Text\ChangeText.cs" />
     <Compile Include="Assets\Manager\GameManager.cs" />
